Fixing resume date alignment on mobile

--- a/app/assets/stylesheets/_pages.scss
+++ b/app/assets/stylesheets/_pages.scss
@@ -18,18 +18,28 @@
   }
 
   .item {
-    display: flex;
+    margin-bottom: 15px;
 
-    .item--year {
-      font-weight: normal;
-      width: 10%;
+    @media (min-width: 600px) {
+      display: flex;
+      margin-bottom: 0;
     }
 
-    .item--items {
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+
+    &--year {
+      font-weight: normal;
+      width: 100%;
+      @media (min-width: 600px) { width: 10%; }
+    }
+
+    &--items {
       ul {
         list-style: none;
-        padding-left: 0;
         margin-bottom: 0;
+        padding-left: 0;
       }
     }
   }
